# factory-space-prices

./: .dockerignore  .env.example  README.md  docker-compose.yml  project_journal.md  pyproject.toml
.github/workflows/: cd.yml  ci.yml  cicd.yml  cicd_aws.yml
backend/: api.py  dependencies.py  models.py
cfn/: ephemeral.yml  permanent.yml
config/: api_config.yaml  config.yaml  engineering_config.yaml  hpo_config.yaml  train_config.yaml
config/api/: settings.yaml
config/data/: constraints.yaml  feature_cols.yaml  feature_values.yaml
config/engineering/: data.yaml
config/train/: data.yaml  model.yaml
docker/: Dockerfile.backend  Dockerfile.frontend  Dockerfile.mlflow
frontend/: app.py
models/champion_model/: champion_info.json  model.pkl  onehot_encoder.pkl  target_encoder.pkl
notebooks/: 01_raw_eda.ipynb  01a_data_prep.ipynb  02_eda_processed.ipynb  03_multicollinearity_analysis.ipynb  04_feature_engineering.ipynb  04a_mrt_distance.ipynb  05_preprocessing_pipeline.ipynb  06_ridge_regression.ipynb  07_random_forest.ipynb  08_xgboost.ipynb  09_model_comparison.ipynb  09a_macro_ablation.ipynb  10_conclusion.ipynb
notebooks/archive/: 03_multicollinearity_analysis.ipynb  04_feature_engineering.ipynb  06_ridge_regression.ipynb  07_random_forest.ipynb  08_xgboost.ipynb  09a_macro_ablation.ipynb
notebooks/suss_achive/: Distance to Nearest MRT - Using OneMap API.ipynb  [1] ANL488_SRNE_Data_for_Modelling.ipynb  [2] Data Exploration with Outliers.ipynb  [3] ANL488 - Remove Outlier,Dummy.ipynb  [4] ANL488 - Linear Regression Model.ipynb  [5] RandomForestRegressor.ipynb  (+1 more)
scripts/: demo-down.sh  demo-up.sh  start.sh
src/: inference.py
tests/: conftest.py  test_feature_engineering.py  test_inference.py  test_orchestrator.py
(+12 files in other folders)
